policies/gatekeeper/templates/disallow-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
  annotations:
    metadata.gatekeeper.sh/title: "Disallow Privileged"
    metadata.gatekeeper.sh/version: 1.0.0
    description: "Disallows the use of privileged containers"
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged
      validation:
        openAPIV3Schema:
          type: object
          properties:
            exemptNamespaces:
              type: array
              items:
                type: string
              description: "Namespaces exempt from this policy"
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sdisallowprivileged
        
        # Get exempt namespaces
        exempt_namespaces := input.parameters.exemptNamespaces
        
        # Check if current namespace is exempt
        is_exempt_namespace {
          input.review.object.metadata.namespace == exempt_namespaces[_]
        }
        
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not is_exempt_namespace
          
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Privileged containers are not allowed: %v", [container.name])
        }
        
        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"
          not is_exempt_namespace
          
          container := input.review.object.spec.initContainers[_] 
          container.securityContext.privileged == true
          msg := sprintf("Privileged init containers are not allowed: %v", [container.name])
        }
